syntax = "proto3";

package dealer;

import "google/protobuf/timestamp.proto";
import "internal/lottery_service/proto/dealer/ball.proto";
import "internal/lottery_service/proto/dealer/common.proto";
import "internal/lottery_service/proto/dealer/game.proto";

option go_package = "g38_lottery_service/internal/lottery_service/proto/generated/dealer";

// 遊戲階段變更事件
message StageChangedEvent {
  // 舊遊戲階段
  GameStage old_stage = 1;
  // 新遊戲階段
  GameStage new_stage = 2;
}

// 球抽取事件
message BallDrawnEvent {
  // 抽取的球
  Ball ball = 1;
}

// 遊戲創建事件
message GameCreatedEvent {
  // 新遊戲的初始狀態
  GameData initial_state = 1;
}

// 遊戲取消事件
message GameCancelledEvent {
  // 取消原因
  string reason = 1;
  // 取消時間
  google.protobuf.Timestamp cancel_time = 2;
}

// 遊戲完成事件
message GameCompletedEvent {
  // 最終遊戲數據
  GameData final_state = 1;
}

// 額外球選邊事件
message ExtraBallSideSelectedEvent {
  // 選擇的一側
  ExtraBallSide selected_side = 1;
}

// 心跳事件
message HeartbeatEvent {
  // 心跳訊息
  string message = 1;
}

// 遊戲狀態通知事件
message NotificationEvent {
  // 完整的遊戲數據
  GameData game_data = 1;
  // 通知訊息
  string message = 2;
}

// 遊戲事件
message GameEvent {
  // 事件類型
  GameEventType event_type = 1;
  // 事件發生時間
  google.protobuf.Timestamp timestamp = 2;
  // 遊戲ID
  string game_id = 3;
  
  // 事件詳情，根據事件類型使用不同的欄位
  oneof event_data {
    StageChangedEvent stage_changed = 4;
    BallDrawnEvent ball_drawn = 5;
    GameCreatedEvent game_created = 6;
    GameCancelledEvent game_cancelled = 7;
    GameCompletedEvent game_completed = 8;
    ExtraBallSideSelectedEvent extra_ball_side_selected = 9;
    HeartbeatEvent heartbeat = 10;
    NotificationEvent notification = 11;
  }
}

// 訂閱遊戲事件請求
message SubscribeGameEventsRequest {
  // 房間ID
  string room_id = 1;
} 